--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
         </section>
         <section>
             <h2 id="contact">Contact</h2>
-            <span class=".bouncy c-link"><a href="mailto: catieoconnor19@yahoo.com">Send Email</a></span>
-            <span class=".bouncy c-link"><a href="https://github.com/coconnor10">GitHub</a></span>
-            <span class=".bouncy c-link"><a
-                    href="https://www.linkedin.com/in/catie-o%E2%80%99connor-32570b19a/">LinkedIn</a>
+            <span class="c-link"><a href="mailto: catieoconnor19@yahoo.com">Send Email</a></span>
+            <span class="c-link"><a href="https://github.com/coconnor10">GitHub</a></span>
+            <span class="c-link"><a href="https://www.linkedin.com/in/catie-o%E2%80%99connor-32570b19a/">LinkedIn</a>
             </span>
 
         </section>
