added titles to images

--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
             </div>
 
         </section>
-        <section class="a-c">
+        <section>
             <h2 id="mywork">My Work</h2>
-            <span class="pad">
-                <a href="https://coconnor10.github.io/hw1b/"><img class="work" src="./images/horiseon.png"
-                        alt="screenshot of Horiseon website" /></a>
+            <span class="pad pic">
+                <a href="https://coconnor10.github.io/hw1b/" target="_blank"><img class="work"
+                        src="./images/horiseon.png" alt="screenshot of Horiseon Website" />
+                    <div class="text">Horiseon</div>
+                </a>
             </span>
-            <span>
-                <a href="https://coconnor10.github.io/CSS-cheat-sheat/" alt="screenshot of CSS cheat sheet website"><img
-                        class="work" src="./images/css cheat sheet.png" /></a>
+            <span class="pic">
+                <a href="https://coconnor10.github.io/CSS-cheat-sheat/" target="_blank"><img class="work"
+                        src="./images/css cheat sheet.png" alt="screenshot of CSS cheat sheet website" />
+                    <div class="text">CSS Cheat Sheet</div>
+                    </div>
+                </a>
                 </a>
             </span>
 
@@ -50,10 +55,17 @@
         </section>
         <section>
             <h2 id="contact">Contact</h2>
-            <span class="c-link"><a href="mailto: catieoconnor19@yahoo.com">Send Email</a></span>
-            <span class="c-link"><a href="https://github.com/coconnor10">GitHub</a></span>
-            <span class="c-link"><a href="https://www.linkedin.com/in/catie-o%E2%80%99connor-32570b19a/">LinkedIn</a>
-            </span>
+            <a href="mailto: catieoconnor19@yahoo.com" target="_blank"><button class="button">
+                    Send Email
+                </button></a>
+            <a href="https://github.com/coconnor10" target="_blank"><button class="button">
+                    GitHub
+                </button></a>
+            <a href="https://www.linkedin.com/in/catie-o%E2%80%99connor-32570b19a/" target="_blank"><button
+                    class="button">
+                    LinkedIn
+                </button></a>
+
 
         </section>
     </main>
