Added info into README

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
 
     <main>
+        <!--- about me --->
         <section>
             <h2 id="about">About Me</h2>
             <div class="sections">
@@ -34,8 +35,11 @@
             </div>
 
         </section>
+
+        <!--- my work --->
         <section>
             <h2 id="mywork">My Work</h2>
+
             <span class="pad pic">
                 <a href="https://coconnor10.github.io/hw1b/" target="_blank"><img class="work"
                         src="./images/horiseon.png" alt="screenshot of Horiseon Website" />
@@ -50,9 +54,9 @@
                 </a>
                 </a>
             </span>
-
-
         </section>
+
+        <!--- contacts section --->
         <section>
             <h2 id="contact">Contact</h2>
             <a href="mailto: catieoconnor19@yahoo.com" target="_blank"><button class="button">
