--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <p>Hi! My name is Catie. I am a young, up-and-coming web developer based in Chicago,
                     Illinois.</p>
                 <p>I am currently learning HTML, CSS, and JavaScript.</p>
-                <p>When I am not coding, I can either be found at home on with my 2 cats, hunched over my desk playing
+                <p>When I am not coding, I can either be found at home on the couch with my 2 cats, hunched over my desk
+                    playing
                     video games, or at a local Irish pub.</p>
             </div>
 
