added resume link, link and pic to project 1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a class="navlink" href="#about">About Me</a>
         <a class="navlink" href="#mywork">My Work</a>
         <a class="navlink" href="#contact">Contact</a>
+        <a class="navlink" href="./Assets/CatherineOConnor-Resume2021 (3).pdf">Download Resume</a>
     </nav>
 
     <main>
@@ -40,21 +41,31 @@
         <!--- my work --->
         <section>
             <h2 id="mywork">My Work</h2>
+            <div class="d-flex">
+                <div class="pic pad">
+                    <a href="https://masonmccoy.github.io/meal-prepper/" target="_blank"><img class="work"
+                            src="./images/meal-prepper-screenshot.png" alt="screenshot of Homebuddy App" />
+                        <div class="text">Homebuddy App (Project 1)</div>
+                    </a>
+                </div>
 
-            <span class="pad pic">
-                <a href="https://coconnor10.github.io/hw1b/" target="_blank"><img class="work"
-                        src="./images/horiseon.png" alt="screenshot of Horiseon Website" />
-                    <div class="text">Horiseon</div>
+                <div class="pic pad">
+                    <a href="https://coconnor10.github.io/hw1b/" target="_blank"><img class="work"
+                            src="./images/horiseon.png" alt="screenshot of Horiseon Website" />
+                        <div class="text">Horiseon</div>
+                    </a>
+                </div>
+
+                <div class="pic">
+                    <a href="https://coconnor10.github.io/CSS-cheat-sheat/" target="_blank"><img class="work"
+                            src="./images/css cheat sheet.png" alt="screenshot of CSS cheat sheet website" />
+                        <div class="text">CSS Cheat Sheet</div>
+                </div>
                 </a>
-            </span>
-            <span class="pic">
-                <a href="https://coconnor10.github.io/CSS-cheat-sheat/" target="_blank"><img class="work"
-                        src="./images/css cheat sheet.png" alt="screenshot of CSS cheat sheet website" />
-                    <div class="text">CSS Cheat Sheet</div>
-                    </div>
                 </a>
-                </a>
-            </span>
+
+
+            </div>
         </section>
 
         <!--- contacts section --->
