added contact me form elements

--- a/index.html
+++ b/index.html
@@ -38,39 +38,48 @@
 
         </section>
 
-        <!--- my work --->
+        <!--- Technologies --->
         <section>
-            <h2 id="mywork">My Work</h2>
-            <div class="d-flex">
-                <div class="pic pad">
-                    <a href="https://masonmccoy.github.io/meal-prepper/" target="_blank"><img class="work"
-                            src="./images/meal-prepper-screenshot.png" alt="screenshot of Homebuddy App" />
-                        <div class="text">Homebuddy App (Project 1)</div>
-                    </a>
-                </div>
-
-                <div class="pic pad">
-                    <a href="https://coconnor10.github.io/hw1b/" target="_blank"><img class="work"
-                            src="./images/horiseon.png" alt="screenshot of Horiseon Website" />
-                        <div class="text">Horiseon</div>
-                    </a>
-                </div>
-
-                <div class="pic">
-                    <a href="https://coconnor10.github.io/CSS-cheat-sheat/" target="_blank"><img class="work"
-                            src="./images/css cheat sheet.png" alt="screenshot of CSS cheat sheet website" />
-                        <div class="text">CSS Cheat Sheet</div>
-                </div>
-                </a>
-                </a>
-
+            <h2 id="mywork">Technologies</h2>
+            <div class="d-flex sections">
+                <table>
+                    <tr class="table-headers">
+                        <td>Front-End</td>
+                        <td>Python</td>
+                        <td>JavaScript</td>
+                        <td>Database</td>
+                        <td>Concepts</td>
+                    </tr>
+                    <tr>
+                        <td>HTML5</td>
+                        <td>Django</td>
+                        <td>Express</td>
+                        <td>MySQL</td>
+                        <td>AJAX</td>
+                    </tr>
+                    <tr>
+                        <td>CSS3</td>
+                        <td>Flask</td>
+                        <td>Mongoose</td>
+                        <td>MongoDB</td>
+                        <td>OOP</td>
+                    </tr>
+                    <tr>
+                        <td>Bootstrap</td>
+                        <td>Unittest</td>
+                        <td>React</td>
+                        <td></td>
+                        <td>REST</td>
+                    </tr>
+                </table>
 
             </div>
         </section>
 
-        <!--- contacts section --->
+        <!--- contact links section --->
         <section>
-            <h2 id="contact">Contact</h2>
+            <h2 id="contact-links">Contact</h2>
+
             <a href="mailto: catieoconnor19@yahoo.com" target="_blank"><button class="button">
                     Send Email
                 </button></a>
@@ -81,6 +90,13 @@
                     class="button">
                     LinkedIn
                 </button></a>
+
+            <div>
+                <h3>Contact Me:</h3>
+                <p>Name: <input type="text" name="name"> Email: <input type="text" name="email"></p>
+                <p>Message: <textarea></textarea></p>
+                <p><input type="submit" value="Send Message" class="button"></p>
+            </div>
 
 
         </section>
